--- a/public/style.css
+++ b/public/style.css
@@ -240,3 +240,166 @@ h3{
     bottom: 49%;  /*position from the bottom*/
     opacity: 1;  /*img titel shows back*/
 }
+
+/* Fisharman Stories Records Section*/
+.fishermanStoriesRecords{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+.fishermanStoriesRecords-col{
+   /* flex-basis: 31%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left; */
+ flex-basis: 32%;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    margin-bottom: 5%;
+    position: relative;
+    overflow: hidden;
+
+}
+.fishermanStoriesRecords-col img{
+    width: 100%; 
+    border-radius: 10px;
+}
+.layerFishImg{
+    background: transparent;
+    height: 72%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 0.5s;
+}
+.layerFishImg:hover{
+    background: #00b1e270;
+}
+.layerFishImg h3{
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    font-size: 26px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    opacity: 0;        /*makes to img titel disappear*/
+    transition: 0.5s;
+}
+.layerFishImg:hover h3{
+    bottom: 49%;  /*position from the bottom*/
+    opacity: 1;  /*img titel shows back*/
+}
+.fishermanStoriesRecords-col p{
+    padding: 0%;
+}
+.fishermanStoriesRecords-col h3{
+    margin-top: 16px;
+    margin-bottom: 15px;
+    text-align: center;
+}
+
+/*------- call to action ------*/
+.cta{
+    margin: 100px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(0,0,0,0.541),rgba(0, 0, 0, 0.541)),url(images/mjorn2.jpg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0;
+}
+.cta h1{
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
+}
+.hero-btn2{
+    display:inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
+.hero-btn2:hover{
+    border: 1px solid #f44336;
+    background: #f44336;
+    transition: 1s;
+}
+@media(max-width: 700px){
+    .cta h1{
+        font-size: 24px;
+    }
+}
+
+/*--   Footer Section  --*/
+
+.footer{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600;
+}
+.icons .fa{
+    color: #f44336;
+    margin: 0 13px;
+    cursor: pointer;
+    padding: 18px 0;
+}
+.fa-heart-o{
+    color: #f44336;
+}
+/* ----- About Us Page ----- */
+.sub-header{
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/about3.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+.sub-header h1{
+    margin-top: 100px;
+    color: #fff;
+}
+.sub-header .nav-links ul li a{
+    color: #fff;
+}
+.about-us{
+    width: 90%;
+    margin: auto;
+    padding-top: 60px;
+    padding-bottom: 50px;
+}
+.about-col{
+   flex-basis: 48%;
+    padding: 30px 2px; 
+}
+.about-col img{
+    width: 100%;
+    height: 90%;
+    border-radius: 10px;/*making img bottom corners round*/
+}
+.about-col h1{
+    padding-top: 0;
+}
+.about-col p{
+    padding: 15px 0 25px;
+}
+@media(max-width: 700px){
+    
+        .fa-bars{color:#fff;} /*icon color*/  
+}
