--- a/public/style.css
+++ b/public/style.css
@@ -403,3 +403,150 @@ h3{
     
         .fa-bars{color:#fff;} /*icon color*/  
 }
+
+/*----- Contact us page -----*/
+.location{
+    width: 80%;
+    margin: auto;
+    padding: 100px 0;
+    padding-bottom: 0px;
+}
+.location iframe{
+    width: 100%;
+}
+
+.contact-us{
+    width: 80%;
+    margin: auto;
+}
+.contact-col{
+    flex-basis: 48%;
+    margin-right: auto;
+    margin-bottom: 30px;
+}
+.contact-col div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 35px;
+}
+.contact-col div .fa{
+    font-size: 26px;
+    color: #f44336;
+    margin: 10px;
+    margin-right: 30px;
+}
+.contact-col div p{
+    padding: 0;
+}
+.contact-col div h5{
+    font-size: 18px;
+    margin-bottom: 5px;
+    color: #555;
+    font-weight: 400;
+}
+.contact-col input, .contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 15px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+/*------ Price & Equipment page ------*/
+
+.price{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+    
+}
+h1{
+    color: #253439;
+    font-size: 36px;
+    font-weight: 600; /*ticknes of letters*/
+}
+p{
+    color: #253439;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 10px;
+}
+.row{
+    margin-top: 5%;
+    display: flex; /* it is displayng content in a row*/
+    justify-content: space-between;
+}
+.price-line2{
+    padding-top: 45px;
+}
+.price-col{
+    flex-basis: 31%;
+    background: #fff3f3;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.5s;
+}
+h2{
+    font-size: 36px;
+    color: #253439;
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+}
+.price-col:hover{
+    box-shadow:0 0 20px 0px rgba(0,0,0,0.2) ;
+}
+.price-col div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 32px;
+}
+.price-col div .fa{
+    font-size: 15px;
+    color: #f44336;  
+    margin-left: 32%;
+}
+.price-col div p{
+    padding: 0;
+    
+}
+.price-col div h4{
+    font-size: 35px;
+    margin-bottom: 5px;
+    color: #253439;
+    font-weight: 400;
+    text-align: center;
+    margin-left: 25%;
+}
+
+/*------ Booking page ------*/
+.booking{
+    text-align:center;
+    padding-top: 80px;
+    width: 80%;
+    margin: auto;
+    
+
+    /*width: 80%;
+    margin: auto;
+    padding: 100px 0;
+    padding-bottom: 0px; */
+
+}
+.booking-col{
+    flex-basis: 31;
+    padding: 20px 12px;
+    margin-bottom: 5%;
+}
+.booking-col input, .booking-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 15px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
